<resources>
    <string name="app_name">SOMANLPAnnotator</string>
    <string name="please_enter_your_email">Please enter your email</string>
    <string name="please_enter_email_detailed_message">Please enter your email (preferably, your CypherCrescent email). This will help us better log your annotations.</string>
    <string name="email">Email</string>
    <string name="skip">Skip</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="type_your_query_string_below">Type your query string below</string>
    <string name="query_soma">Query SOMA</string>
    <string name="query">Query</string>
    <string name="entities">Entities</string>
    <string name="decline">Decline</string>
    <string name="accept">Accept</string>
    <string name="enter_email_and_continue">Enter email and continue</string>
    <string name="intent">Intent</string>
    <string name="log_query_and_annotation">Log Query and Annotation</string>
    <string name="option">Option</string>
    <string name="ok">OK</string>
    <string name="network_error_message">This procedure makes a network call, turn on your internet or connect your device to a wi-fi network to continue.</string>
    <string name="empty_string_to_parse_error_message">Please enter a query for SOMA\'s API to parse</string>
    <string name="intent_prefix_for_view_annotation">\"Intent: \"</string>
    <string name="no_named_entities_message">This query has no named entities</string>
    <string name="annotate_entity">Annotate Entity</string>
    <string name="dialog_message">Dialog Message</string>
    <string name="image_button_content_description_in_view_and_delete_entity_row">Delete entity when making annotations</string>
    <string name="cancel">Cancel</string>
    <string name="empty_entities_message">You have not annotated any entities for the above query. To create an entity annotation, highlight the text of interest, tap the annotate option on the toolbar and select the desired entity.</string>
    <string name="entity_not_in_query_string_error_message">Please ensure that your annotated entities exist within the main query string</string>
    <string name="enter_valid_email">Please enter a valid email signature</string>
</resources>