<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context=".Activities.ViewAnnotationActivity">

    <include
        layout="@layout/welcome_toolbar"
        android:id="@+id/toolbar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/type_your_query"
                style="@style/CustomTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin_20"
                android:layout_marginLeft="@dimen/default_margin_20"
                android:layout_marginTop="@dimen/default_margin_20"
                android:layout_marginEnd="@dimen/default_margin_20"
                android:layout_marginRight="@dimen/default_margin_20"
                android:text="@string/type_your_query_string_below"
                android:textSize="@dimen/default_text_size_25"
                android:transitionName="text_view_shared_element"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/query"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin_20"
                android:layout_marginStart="@dimen/default_margin_20"
                android:layout_marginLeft="@dimen/default_margin_20"
                android:layout_marginEnd="@dimen/default_margin_20"
                android:layout_marginRight="@dimen/default_margin_20"
                android:minLines="5"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:hint="@string/query_soma"
                android:background="@drawable/edit_text_background_multiline"
                android:importantForAutofill="no"
                android:transitionName="edit_text_shared_element"
                style="@style/CustomEditText"
                app:layout_constraintTop_toBottomOf="@id/type_your_query"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/progress_bar"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:scaleX="0.5"
                android:scaleY="0.5"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                android:layout_marginTop="@dimen/default_margin_20"
                android:visibility="gone"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/nlu_annotator_loader"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/query"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/query_button"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="@dimen/default_margin_20"
                android:layout_marginStart="@dimen/default_margin_20"
                android:layout_marginEnd="@dimen/default_margin_20"
                android:layout_marginBottom="@dimen/default_margin_20"
                android:background="@drawable/main_button_background"
                android:text="@string/query"
                android:transitionName="button_shared_element"
                style="@style/CustomMainButton"
                app:layout_constraintTop_toBottomOf="@id/progress_bar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/intent_label"
                style="@style/CustomTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin_20"
                android:layout_marginLeft="@dimen/default_margin_20"
                android:layout_marginTop="@dimen/default_margin_40"
                android:layout_marginEnd="@dimen/default_margin_20"
                android:layout_marginRight="@dimen/default_margin_20"
                android:text="@string/intent"
                android:textSize="@dimen/default_text_size_25"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/query_button"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/intent"
                style="@style/CustomTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin_20"
                android:layout_marginTop="@dimen/default_margin_10"
                android:layout_marginEnd="@dimen/default_margin_20"
                android:paddingTop="@dimen/default_margin_10"
                android:paddingStart="@dimen/default_margin_20"
                android:paddingEnd="@dimen/default_margin_20"
                android:paddingBottom="@dimen/default_margin_10"
                android:background="@drawable/intent_background_selected"
                android:textSize="@dimen/default_text_size_17"
                android:textColor="@color/white"
                android:text=""
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/intent_label"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/entity_label"
                style="@style/CustomTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin_20"
                android:layout_marginLeft="@dimen/default_margin_20"
                android:layout_marginTop="@dimen/default_margin_40"
                android:layout_marginEnd="@dimen/default_margin_20"
                android:layout_marginRight="@dimen/default_margin_20"
                android:text="@string/entities"
                android:textSize="@dimen/default_text_size_25"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/intent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/entity_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin_20"
                android:layout_marginLeft="@dimen/default_margin_20"
                android:layout_marginTop="@dimen/default_margin_10"
                android:layout_marginEnd="@dimen/default_margin_20"
                android:layout_marginRight="@dimen/default_margin_20"
                android:scrollbars="none"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/entity_label"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/decline_results"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="@dimen/default_margin_50"
                android:layout_marginStart="@dimen/default_margin_20"
                android:layout_marginEnd="@dimen/default_margin_10"
                android:layout_marginBottom="@dimen/default_margin_20"
                android:paddingStart="@dimen/default_margin_20"
                android:paddingEnd="@dimen/default_margin_20"
                android:background="@drawable/decline_button_background"
                android:drawableEnd="@drawable/ic_cancel"
                android:text="@string/decline"
                android:visibility="gone"
                style="@style/CustomMainButton"
                app:layout_constraintTop_toBottomOf="@id/entity_list"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/accept_results"
                app:layout_constraintBottom_toBottomOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/accept_results"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="@dimen/default_margin_50"
                android:layout_marginStart="@dimen/default_margin_10"
                android:layout_marginEnd="@dimen/default_margin_20"
                android:layout_marginBottom="@dimen/default_margin_20"
                android:paddingStart="@dimen/default_margin_20"
                android:paddingEnd="@dimen/default_margin_20"
                android:background="@drawable/accept_button_background"
                android:drawableEnd="@drawable/ic_check"
                android:text="@string/accept"
                android:visibility="gone"
                style="@style/CustomMainButton"
                app:layout_constraintTop_toBottomOf="@id/entity_list"
                app:layout_constraintStart_toEndOf="@id/decline_results"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>