<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context=".Activities.MakeAnnotationActivity">

    <include
        layout="@layout/welcome_toolbar"
        android:id="@+id/toolbar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/progress_bar"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:scaleType="centerCrop"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/nlu_annotator_loader"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

<!--    <ProgressBar-->
<!--        android:id="@+id/progress_bar"-->
<!--        android:layout_width="50dp"-->
<!--        android:layout_height="50dp"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintBottom_toBottomOf="parent" />-->

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/type_your_query"
                style="@style/CustomTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin_20"
                android:layout_marginLeft="@dimen/default_margin_20"
                android:layout_marginTop="@dimen/default_margin_20"
                android:layout_marginEnd="@dimen/default_margin_20"
                android:layout_marginRight="@dimen/default_margin_20"
                android:text="@string/type_your_query_string_below"
                android:textSize="@dimen/default_text_size_25"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.cyph.somanlpannotator.CustomViews.CustomEditText
                android:id="@+id/query"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin_20"
                android:layout_marginStart="@dimen/default_margin_20"
                android:layout_marginLeft="@dimen/default_margin_20"
                android:layout_marginEnd="@dimen/default_margin_20"
                android:layout_marginRight="@dimen/default_margin_20"
                android:minLines="5"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:hint="@string/query_soma"
                android:background="@drawable/edit_text_background_multiline"
                android:importantForAutofill="no"
                style="@style/CustomEditText"
                app:layout_constraintTop_toBottomOf="@id/type_your_query"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/intent_label"
                style="@style/CustomTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin_20"
                android:layout_marginLeft="@dimen/default_margin_20"
                android:layout_marginTop="@dimen/default_margin_40"
                android:layout_marginEnd="@dimen/default_margin_20"
                android:layout_marginRight="@dimen/default_margin_20"
                android:text="@string/intent"
                android:textSize="@dimen/default_text_size_25"
                app:layout_constraintTop_toBottomOf="@id/query"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/intent_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin_20"
                android:layout_marginLeft="@dimen/default_margin_20"
                android:layout_marginTop="@dimen/default_margin_10"
                android:layout_marginEnd="@dimen/default_margin_20"
                android:layout_marginRight="@dimen/default_margin_20"
                android:scrollbars="none"
                android:overScrollMode="never"
                app:layout_constraintTop_toBottomOf="@id/intent_label"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/entity_label"
                style="@style/CustomTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin_20"
                android:layout_marginLeft="@dimen/default_margin_20"
                android:layout_marginTop="@dimen/default_margin_40"
                android:layout_marginEnd="@dimen/default_margin_20"
                android:layout_marginRight="@dimen/default_margin_20"
                android:text="@string/entities"
                android:textSize="@dimen/default_text_size_25"
                app:layout_constraintTop_toBottomOf="@id/intent_list"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/empty_entities_message"
                style="@style/CustomTextViewForEmptyMessage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginStart="@dimen/default_margin_20"
                android:layout_marginLeft="@dimen/default_margin_20"
                android:layout_marginTop="@dimen/default_margin_10"
                android:layout_marginEnd="@dimen/default_margin_20"
                android:layout_marginRight="@dimen/default_margin_20"
                android:text="@string/empty_entities_message"
                android:textSize="@dimen/default_text_size"
                app:layout_constraintTop_toBottomOf="@id/entity_label"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/entity_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin_20"
                android:layout_marginLeft="@dimen/default_margin_20"
                android:layout_marginTop="@dimen/default_margin_10"
                android:layout_marginEnd="@dimen/default_margin_20"
                android:layout_marginRight="@dimen/default_margin_20"
                android:scrollbars="none"
                android:overScrollMode="never"
                app:layout_constraintTop_toBottomOf="@id/empty_entities_message"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/log_annotation"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginTop="@dimen/default_margin_40"
                android:layout_marginStart="@dimen/default_margin_20"
                android:layout_marginEnd="@dimen/default_margin_20"
                android:layout_marginBottom="@dimen/default_margin_20"
                android:paddingStart="@dimen/default_margin_20"
                android:paddingEnd="@dimen/default_margin_20"
                android:background="@drawable/main_button_background"
                android:text="@string/log_query_and_annotation"
                style="@style/CustomMainButton"
                app:layout_constraintTop_toBottomOf="@id/entity_list"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>